--- a/coc.html
+++ b/coc.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html>
   <head>
@@ -207,19 +208,21 @@
         <img src="images/navbar.png" alt="Navbar" />
       </span>
     </a>
-    <div class="tocify-wrapper">
-      <img src="images/logo.png" alt="Logo" />
-      <div id="toc">
+    <div class="toc-wrapper">
+      <img src="images/logo.png" class="logo" alt="Logo" />
+      <div id="toc" class="toc-list-h1">
+          <li>
+            <a href="#emojidex-anti-code-of-conduct" class="toc-h1 toc-link" data-title="emojidex [Anti] Code of Conduct">emojidex [Anti] Code of Conduct</a>
+          </li>
       </div>
     </div>
     <div class="page-wrapper">
       <div class="dark-box"></div>
       <div class="content">
-        <h1 id="emojidex-anti-code-of-conduct">emojidex [Anti] Code of Conduct</h1>
-
+        <h1 id='emojidex-anti-code-of-conduct'>emojidex [Anti] Code of Conduct</h1>
 <p>The emojidex project deals with emoji, which have a unique duality in that they are both objects 
 of speech and objects of expression. As such, Freedom of Speech and Freedom of Expression are 
-integral concepts in the existence, extension and propagation of emoji. As a &ldquo;Code of Conduct&rdquo; 
+integral concepts in the existence, extension and propagation of emoji. As a &quot;Code of Conduct&quot; 
 is a tool used to censor speech or expression and expel contributors, creators, or community 
 members based not on their merits but rather their beliefs, opinions, views, and/or how they 
 choose to speak or express those views; the emojidex project feels it would be antithetical to 
